2008-09-24 Erwann Chenede - <erwann.chenede@sun.com>
  
  * gtk-engine/gtk-2.0/Makefile.am:
  * Makefile.am: don't install dark-* files.

2008-09-19 Erwann Chenede - <erwann.chenede@sun.com>

  * icons/* : more icons for printer and gnome-netstatus
  * metacity/Makefile.am : copy correctly metacity-theme-1.xml
  * gtk-engine/gtk-2.0/gtkrc : fix menu prelight color

2008-09-19 Erwann Chenede - <erwann.chenede@sun.com>

  * icons/* : added new printer and network status icons for nwam project

2008-09-19 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/gtk-2.0/gtkrc : 
  * gtk-engine/nimbus_rc_style.c : lighten up the default background 
    as requested by Xdesign

2008-09-19 Erwann Chenede - <erwann.chenede@sun.com>

  Initial implementation of the Dark Nimbus theme

  * configure.in : bumped to 0.1.0
  * metacity/dark-metacity-theme-1.xml
  * metacity/Makefile.am
  * gtk-engine/gtk-2.0/dark-gtkrc
  * gtk-engine/gtk-2.0/Makefile.am
  * gtk-engine/tests/combo.c
  * gtk-engine/tests/twf.c
  * gtk-engine/tests/panes.c
  * gtk-engine/tests/combobox.c
  * gtk-engine/tests/click.c
  * gtk-engine/tests/twf.glade
  * gtk-engine/nimbus_rc_style.c
  * gtk-engine/images/dark-button-corner-normal-top-left.png
  * gtk-engine/images/dark-button-corner-active-top-right.png
  * gtk-engine/images/dark-button-corner-prelight-bottom-right.png
  * gtk-engine/images/dark-button-corner-disabled-bottom-left.png
  * gtk-engine/images/dark-button-corner-active-top-left.png
  * gtk-engine/images/dark-button-corner-normal-top-right.png
  * gtk-engine/images/dark-button-corner-normal-bottom-right.png
  * gtk-engine/images/dark-button-corner-disabled-top-right.png
  * gtk-engine/images/dark-button-corner-active-bottom-right.png
  * gtk-engine/images/dark-button-corner-disabled-top-left.png
  * gtk-engine/images/dark-button-corner-normal-bottom-left.png
  * gtk-engine/images/dark-button-corner-disabled-bottom-right.png
  * gtk-engine/images/dark-button-corner-prelight-top-right.png