@@ -1,3 +1,11 @@
+2008-10-15 Erwann Chenede - <erwann.chenede@sun.com>
+
+  * gtk-engine/nimbus_rc_style.c: removed reference to gdk_display_get_default 
+    as gtk now initializes it after the theme engine is loaded. fixes 6758256
+    Also revert to previous vline color.
+  * gtk-engine/nimbus_utils.c: fix spin button rendering error in firefox fixes 6698078
+  * configure.in : bumped version to 0.1.1
+
 2008-09-24 Erwann Chenede - <erwann.chenede@sun.com>
   
   * gtk-engine/gtk-2.0/Makefile.am:
